experience overflow issue fixed

--- a/components/CSS/experience.module.css
+++ b/components/CSS/experience.module.css
@@ -1,7 +1,7 @@
 
 .cardBody{
     position: relative;
-    width: 30rem;
+    width: 24rem;
     height: 35rem;
 }
 
